@@ -3,13 +3,13 @@ Hash: SHA1
 
 AUX makefile-fixes.patch 837 RMD160 c63c95b89f5d2fce1610a0abf6c6c25121d5e3b6 SHA1 b4fee6c94d2f6e3827dc47dea3f493944948bf3d SHA256 6f7612404cccd9e40de19df3f86eb86be9a17fa105eac21e615c0d464f92cc31
 DIST eden_V5.3.tar.gz 1139981 RMD160 2cf8eca5e0ba90f558eeab9c72cd98c8cbb8f3ac SHA1 ceefd810044dfa33063fe35d3de80d0c454dd3be SHA256 249447f507ace3e188ce0d76796c6e307c043592405db1f6c24f3e90917ec524
-EBUILD eden-5.3.ebuild 1697 RMD160 025600eeb23329419b921cc2090f08bd006c55ed SHA1 674ccf8b29af0f6128e8325d21a4a859367486d6 SHA256 ab03c7547d7fbf3e4342f0b4b1563d6019bd6444f0bf5a219ce020d45474228e
-MISC ChangeLog 1646 RMD160 3763fbc0459d2ddfebb8f740297d409f79216754 SHA1 b5542f46573ecf0ae043d18661217e825cae8a49 SHA256 8ffe0709523a63b7ecda4663d76f57dc1588c22744f3ea654c1af79dbfcc9c00
+EBUILD eden-5.3.ebuild 1641 RMD160 c17afadfafbb4054b62320e708f2aca594b27ef3 SHA1 12c3c43a9641edaf0f0f5bc110f69f19cb719f9f SHA256 b545f08ce3df3f0d6621f3512e10e5c737a80abc2b7305a86575c6e001856e55
+MISC ChangeLog 1782 RMD160 c1a359a4af8eb1894d02d3b725c43fbd5c150de7 SHA1 154deb0f9906acc697df3b37712ec9146b96d4b7 SHA256 01a441c2341eee40df2797e2f740b2f3a4105459f26f6dad6f68a10609ac3a89
 MISC metadata.xml 272 RMD160 fe1b9485c16c778c9af6759a25de99a0f290812d SHA1 b95bdac297f6704d6c9bfcfdbb17b27280567792 SHA256 32b8b0a739fa026bbfebf578484ee84f6e14b137aa54308256427d779f0f9501
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.9 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkiZw8UACgkQOeoy/oIi7uwgrwCfQ3qzhiILkfw19JBfrkCGKUsF
-j3MAn2LQyWamMKVpDwF0+Zx20pGkNoEr
-=QpAM
+iEYEARECAAYFAkwibPEACgkQ1ycZbhPLE2AV/wCfYq8WZjvVp7xPMTgDxHkPv03s
+s88AoJWPQf3NaibgNCoufjegzuXCLrk4
+=ltOl
 -----END PGP SIGNATURE-----
