@@ -1,6 +1,9 @@
 # ChangeLog for sci-chemistry/eden
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/eden/ChangeLog,v 1.11 2008/08/06 15:31:00 ulm Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/eden/ChangeLog,v 1.12 2010/06/23 20:22:00 bicatali Exp $
+
+  23 Jun 2010; Sébastien Fabbro <bicatali@gentoo.org> eden-5.3.ebuild:
+  Removed bindist flag, should be compatible GPL-3 anyway
 
   06 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
   Add USE flag description to metadata wrt GLEP 56.
